# cmake_googletest_sample

./: .gitignore  README.md
inc/: add.h
test/: CMakeLists.txt  addition_test.cpp  test_script.sh
